Feat: Ajuste Criação Views e Controller

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,11 +1,33 @@
-# This is the resource bundle for br.com.inbetta.zui5b2bnf
+# Títulos e Descrições
+appTitle=Envio em Massa de NF B2B
+appDescription=App para envio de notas fiscais B2B
 
-#Texts for manifest.json
+# Labels de Filtros
+lblPeriodo=Período
+lblFilial=Filial (Branch)
+lblCargaInicial=Carga Inicial
 
-#XTIT: Application name
-appTitle=Envio de NF B2B
+# Placeholders
+plcOptional=Opcional
 
-#YDES: Application description
-appDescription=Envio de Notas Fiscais B2B - ZSD277
-#XTIT: Main view title
-title=Envio de NF B2B
+# Títulos de Seções
+secFiltros=Filtros de Seleção
+secResultado=Resultado do Processamento
+
+# Labels de Resultado
+lblStatus=Status
+lblMensagem=Mensagem
+lblQuantidade=Registros Processados
+lblDataHora=Data/Hora
+
+# Botões
+btnProcessar=Processar
+btnLimpar=Limpar Filtros
+btnExportar=Exportar
+
+# Mensagens
+msgProcessando=Iniciando processamento...
+msgSucesso=Processamento concluído com sucesso!
+msgErro=Erro ao processar. Tente novamente.
+msgValidacao=Por favor, preencha pelo menos um período para processar.
+msgFiltrosLimpos=Filtros limpos com sucesso!
